crates/swc_ecma_parser/tests/flow/types/object/unexpected_static_001.js
// error: object types don't have static fields
type A = { static x: X }
